prevent scrolling while modal is visible

--- a/src/index.css
+++ b/src/index.css
@@ -218,3 +218,7 @@ input::placeholder {
 		left: 150%;
 	}
 }
+
+:root:has(.backdrop.show) {
+	overflow: hidden;
+}
